# c-autoconf-template

./: .gitignore  GNUmakefile.in  bootstrap  configure.ac
